add new coin symbol to coins card

--- a/card_rendering/coins.html
+++ b/card_rendering/coins.html
@@ -25,7 +25,7 @@
             <div class="coins box">
                 <div class="amount">
                     <h2 id="camount">Loading...</h2>
-                    <img src="images/esc.png" alt="Coins">
+                    <img src="images/Eat Sleep Coin.svg" alt="Coins">
                 </div>
                 <hr>
                 <div class="buchungen">
