migrate coins to gems

--- a/card_rendering/gems.html
+++ b/card_rendering/gems.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/coins.css">
+    <link rel="stylesheet" href="css/gems.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
-    <script type="text/javascript" language="javascript" src="js/coins.js"></script>
+    <script type="text/javascript" language="javascript" src="js/gems.js"></script>
 </head>
 
 <body>
-    <div class="coincard">
+    <div class="gemcard">
         <div class="image">
             <img id="profile_image" onerror="this.src='images/default-pb.jpg';" src="images/default-pb.jpg" alt="Profile Image">
         </div>
@@ -22,10 +22,10 @@
                 <img id="boosterbadge" style="display: none;" src="images/nitro.png" alt="booster image">
             </div>
             
-            <div class="coins box">
+            <div class="gems box">
                 <div class="amount">
                     <h2 id="camount">Loading...</h2>
-                    <img src="images/Eat Sleep Coin.svg" alt="Coins">
+                    <img src="images/Eat, Sleep, Gem.svg" alt="Gems">
                 </div>
                 <hr>
                 <div class="buchungen">
