add private card rendering

--- a/card_rendering/gems.html
+++ b/card_rendering/gems.html
@@ -29,7 +29,7 @@
                 </div>
                 <hr>
                 <div class="buchungen">
-                    <h4>Buchungen:</h4>
+                    <h4 id="listtitle">Buchungen:</h4>
                     <ul id="list">
                     </ul>
                 </div>
