--- a/card_rendering/rank.html
+++ b/card_rendering/rank.html
@@ -37,6 +37,8 @@
                     </div>
                     <h2 id="xpprogress">?</h2>
                 </div>
+                <!-- nicht löschen! -->
+                <h4 style="text-align: center;"></h4> 
                     
     
             </div>
